2013-12-26  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am:
	(BUILD_VERSION): Bump to b02.
	(CORBA_CHANGESET): Update to current HEAD.
	(JAXP_CHANGESET): Likewise.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.
	* NEWS: Add changes brought in and fix
	formatting.
	* hotspot.map: Sync with forest HEAD.
	* patches/boot/break-processbuilder-dependency.patch:
	Regenerated.
	* patches/boot/ecj-diamond.patch:
	Regenerated.  Add new cases in com.sun.beans.util.Cache
	and java.lang.reflect.WeakCache. Drop ThreadGroupContext
	changes as no longer needed.
	* patches/boot/ecj-multicatch.patch:
	Add new case in java.nio.charset.Charset.
	* patches/boot/ecj-stringswitch.patch:
	Update MethodHandleNatives change to include getDeclaringClass
	and getInvocationHandler.

2013-12-20  Xerxes Rånby  <xerxes@zafena.se>
	    Robert Lougher  <rob@jamvm.org.uk>

	JamVM
	* NEWS: Updated.
	* Makefile.am
	(JAMVM_VERSION): Updated JamVM to 2013-11-18 revision.
	(JAMVM_SHA256SUM): Updated.

2013-12-12  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR1617: Include defs.make in vm.make so
	zeroshark.make is included
	* Makefile.am:
	(JDK_CHANGESET): Set to current HEAD.
	(JDK_SHA256SUM): Likewise.
	* NEWS: Updated with changes brought in.
	* hotspot.map: Set to current HEAD.

2013-10-23  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* NEWS: Add 2.4.3 release notes.

2013-10-02  Yasumasa Suenaga  <yasu@ysfactory.dip.jp>

	* jstack.stp should be adapted CR#7172967

2013-09-23  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* NEWS: Add 2.4.2 release notes.

2013-05-28  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR1410: Icedtea 2.3.9 fails to build using icedtea 1.12.4
	* Makefile.am: