@@ -174,7 +174,6 @@ IT_WITH_JAMVM_SRC_ZIP
 IT_DISABLE_OPTIMIZATIONS
 IT_ENABLE_WERROR
 IT_ENABLE_JAR_COMPRESSION
-IT_SET_SHARK_BUILD
 IT_CHECK_ADDITIONAL_VMS
 
 IT_WITH_VERSION_SUFFIX
